# study-app

./: .gitignore  .release-please-manifest.json  README.md  mise.toml
.devcontainer/: Dockerfile
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  e2e-tests.yaml  frontend-tests.yaml  update-gitops.yaml
kubernetes/: e2e_test.py  k3d-config.yaml  pyproject.toml  setup_cluster_minimal
scripts/: setup_deploy_key  setup_project
src/backend/: .coverage  CHANGELOG.md  Dockerfile  coverage.xml  pyproject.toml
src/backend/src/backend/: main.py
src/frontend/: .coverage  CHANGELOG.md  Dockerfile  coverage.xml  pyproject.toml
src/frontend/frontend/: pyproject.toml
src/frontend/src/frontend/: main.py
