[project]
name = "study-tracker-backend"
version = "0.3.3"
description = "Backend API for tracking study time for DevOps certifications"
readme = "README.md"
authors = [{ name = "dylunabadylu", email = "devops@localhost" }]
requires-python = ">=3.13"
dependencies = ["fastapi>=0.121.1", "uvicorn>=0.38.0"]

[project.scripts]
study-tracker-api = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.4",
]

#[build-system]
#requires = ["uv_build>=0.9.8,<0.10.0"]
#build-backend = "uv_build"

#[tool.uv]
#package = true
