[project]
name = "study-tracker-frontend"
version = "0.0.0"
description = "Frontend for DevOps Study Tracker application"
readme = "README.md"
authors = [{ name = "dylunabadylu", email = "devops@localhost" }]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "responses>=0.25.8",
    "ruff>=0.14.5",
]

[project.scripts]
study-tracker-frontend = "frontend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]

[tool.uv.workspace]
members = [
    "frontend",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
